# GriffinShowManager-core

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac  index.html  params.json
src/: Configuration.cpp  Configuration.h  Makefile.am  Parameter_analyser.cpp  Parameter_analyser.h  Playlist.h  Track.h  main.cpp
tests/: ConfigurationTest.cpp  ConfigurationTest.h  Makefile.am  Parameter_analyserTest.cpp  Parameter_analyserTest.h  PlaylistTest.cpp  PlaylistTest.h  TrackTest.cpp  TrackTest.h  main.cpp
