bin_PROGRAMS=gsmdtest
gsmdtest_SOURCES=\
            main.cpp \
            TrackTest.cpp \
            TrackTest.h \
            PlaylistTest.cpp \
            PlaylistTest.h \
            ../src/Playlist.h \
            ../src/Track.h
gsmdtest_CXXFLAGS = $(CPPUNIT_CFLAGS)
gsmdtest_LDFLAGS = $(CPPUNIT_LIBS)
